# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/web/webview/web_aafwk.gni")
import("//build/test.gni")
import("../../../config.gni")

module_output_path = "webview/Device"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "../../../ohos_adapter/battery_mgr_adapter/include" ]
}

ohos_unittest("battery_mgr_adapter_test") {
  module_out_path = module_output_path

  sources = [ "battery_mgr_adapter_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [ "$webview_path/ohos_adapter:nweb_ohos_adapter" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  if (webview_battery_manager_enable) {
    external_deps += [ "battery_manager:batterysrv_client" ]
  }
}

group("unittest") {
  testonly = true
  deps = []
  if (webview_battery_manager_enable) {
    deps += [ ":battery_mgr_adapter_test" ]
  }
}
